--- a/Stroop Effect.ipynb
+++ b/Stroop Effect.ipynb
@@ -25,6 +25,10 @@
     "    \n",
     "#### 2. What is an appropriate set of hypotheses for this task? What kind of statistical test do you expect to perform? Justify your choices.\n",
     "\n",
+    "The statistical test I will conduct will be based on the following assumptions:\n",
+    "1. The data is collected from a representative, randomly selected portion of the total population;\n",
+    "2. The population distributions of both Congruent and Incongruent tasks are normal.  \n",
+    "\n",
     "The null hypothesis $H_{0}$ is that comparing to the congruent words condition, the incongruent words condition will not signigicantly increase the population reaction time on the task; the alternative hypothesis $H_{a}$ is that comparing to the congruent words condition, the incongruent words condition will significantly increase\n",
     "the mean of the population reaction time of the task.\n",
     "$$H_{0}: \\mu_{incongruent} - \\mu_{congruent} \\leq 0$$\n",
@@ -44,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
