--- a/Stroop Effect.ipynb
+++ b/Stroop Effect.ipynb
@@ -626,7 +626,9 @@
     "1. scipy t test: https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.stats.ttest_rel.html\n",
     "2. LaTex Cheat Sheet: https://www.nyu.edu/projects/beber/files/Chang_LaTeX_sheet.pdf\n",
     "3. Matplotlib Histogram: https://stackoverflow.com/questions/16180946/drawing-average-line-in-histogram-matplotlib\n",
-    "4. Matplotlib Reference Line: https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.axvline.html"
+    "4. Matplotlib Reference Line: https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.axvline.html\n",
+    "5. T-test Assumptions: http://influentialpoints.com/Training/paired_t-test-principles-properties-assumptions.htm\n",
+    "6. T-test Assumptions: http://www2.psychology.uiowa.edu/faculty/mordkoff/GradStats/part%201/I.07%20normal.pdf"
    ]
   }
  ],
