reworded and code blocks reordered

--- a/Stroop Effect.ipynb
+++ b/Stroop Effect.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "max    22.328000    35.255000"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "24"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
        "14.051124999999999"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "22.015916666666666"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "7.9647916666666667"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "3.5593579576451955"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "4.7970571224691376"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "4.8648269103590556"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,16 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1221791d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x113544160>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -406,21 +406,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the box plot we can see that the mean response time of the Incongruent group is obviously larger than the mean response time of the Congruent group. Although this might because of the two outliers in the Incongruent group that skew the mean response time of the Incongruent group. "
+    "From the box plot we can see that the mean response time of the Incongruent group is obviously longer than the mean response time of the Congruent group. Although this might because of the two outliers in the Incongruent group that skew the mean response time of the Incongruent group. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x12269a470>"
+       "<matplotlib.legend.Legend at 0x116f16b38>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the histograms we can prove our conclusion from the box plot that the mean response time of the Incongruent group is skewed by the two outliers as the mean of the Incogruent group is larger than the group's median response time. Whereas the mean and median response time for Congruent group are almost identical."
+    "From the histograms we can prove our conclusion from the box plot that the mean response time of the Incongruent group is skewed by the two outliers as the mean response time of the Incogruent group is longer than the group's median response time. Whereas the mean and median response time for Congruent group are almost identical."
    ]
   },
   {
@@ -469,41 +469,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First I will get the $t_{critical}$ at $\\alpha = 0.05$."
+    "First I will get the degree of freedom:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.7138715277470473"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Compute the t-critical value at alpha = 0.05\n",
-    "t_critical_alpha = stats.t.ppf(1-0.05, 23)\n",
-    "t_critical_alpha"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now get the Degree of Freedom"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +483,7 @@
        "23"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,12 +498,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now I will get the $t_{critical}$ at $\\alpha = 0.05$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7138715277470473"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute the t-critical value at alpha = 0.05\n",
+    "t_critical_alpha = stats.t.ppf(1-0.05, df)\n",
+    "t_critical_alpha"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To calculate the Standard Error of Mean Difference:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
        "0.99302863477834058"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "8.020706944109957"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Ttest_relResult(statistic=8.020706944109957, pvalue=4.1030005857111781e-08)"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
